--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -2,7 +2,7 @@
 <div id="login">
     <form action="/login" method="post">
         <h4>User Name</h4>
-        <input type="text" name="txtUser" id="txtUser" class="form-control">
+        <input type="text" name="txtUser" id="txtUser" class="form-control" autocomplete="off">
         
         <h4>Kata Sandi</h4>
         <input type="password" name="txtPass" id="txtPass" class="form-control">
