--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -1,9 +1,50 @@
 <%- include('../pembungkus/head.ejs') %>
+
 <body>
     <form action="/logout" method="post">
         <button type="submit" class="btn btn-success">Log Out</button>
     </form>
     <div id="gambar" class="putih">
+
+        <div id="foto" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-inner">
+                <% for( let index = 0; index < gambar.length; index++ ) { %>
+                <% if (index === 0) { %>
+                <form action="/hapusGambar1" method="post">
+                    <div class="carousel-item active">
+                        <img src="<%= gambar[index] %>" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <input type="checkbox" name="btnHapus1" id="btnHapus1" value="<%= index %>"
+                                onchange="this.form.submit()">
+                            <h3>HAPUS</h3>
+                        </div>
+                    </div>
+                </form>
+                <% } else {%>
+                <form action="/hapusGambar2" method="post">
+                    <div class="carousel-item">
+                        <img src="<%= gambar[index] %>" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <input type="checkbox" name="btnHapus2" id="btnHapus2" value="<%= index %>"
+                                onchange="this.form.submit()">
+                            <h3>HAPUS</h3>
+                        </div>
+                    </div>
+                </form>
+                <% } %>
+                <% } %>
+
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#foto" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#foto" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
         <h3>Upload Gambar</h3>
         <form action="/gambar" method="post" enctype="multipart/form-data">
             <div>
@@ -20,12 +61,14 @@
                 <form action="/hapusFasilitas1" method="post">
                     <ul>
                         <% for( let index = 0; index < fasilitas1.length; index++ ) { %>
-                            <li><input type="checkbox" name="btnHapus1" id="btnHapus1" value="<%= index %>" onchange="this.form.submit()"><%= fasilitas1[index] %></li>
+                        <li><input type="checkbox" name="btnHapus1" id="btnHapus1" value="<%= index %>"
+                                onchange="this.form.submit()"><%= fasilitas1[index] %></li>
                         <% } %>
                     </ul>
                 </form>
                 <form action="/fasilitas1" method="post">
-                    <input type="text" class="form-control" name="tambahFasilitas1" id="tambahFasilitas1" autocomplete="off"> <br>
+                    <input type="text" class="form-control" name="tambahFasilitas1" id="tambahFasilitas1"
+                        autocomplete="off"> <br>
                     <button type="submit" class="btn btn-primary">Tambah</button>
             </div>
             </form>
@@ -33,42 +76,47 @@
                 <form action="/hapusFasilitas2" method="post">
                     <ul>
                         <% for( let index = 0; index < fasilitas2.length; index++ ) { %>
-                            <li><input type="checkbox" name="btnHapus2" id="btnHapus2" value="<%= index %>" onchange="this.form.submit()"><%= fasilitas2[index] %></li>
+                        <li><input type="checkbox" name="btnHapus2" id="btnHapus2" value="<%= index %>"
+                                onchange="this.form.submit()"><%= fasilitas2[index] %></li>
                         <% } %>
                     </ul>
                 </form>
                 <form action="/fasilitas2" method="post">
-                    <input type="text" class="form-control" name="tambahFasilitas2" id="tambahFasilitas2" autocomplete="off"> <br>
+                    <input type="text" class="form-control" name="tambahFasilitas2" id="tambahFasilitas2"
+                        autocomplete="off"> <br>
                     <button type="submit" class="btn btn-primary">Tambah</button>
                 </form>
             </div>
         </div>
     </div>
     <div class="putih">
-            <h3>Kontak</h3>
-            <div class="kontak row d-flex justify-content-center">
-                <div class="box col col-lg-3.3">
-                    <h4>Email</h4>
-                    <form action="/gantiEmail" method="post">
-                        <input type="text" class="form-control" name="email" id="email" placeholder="<%= email %>" autocomplete="off">
-                        <button type="submit" class="btn btn-primary">Ganti</button>
-                    </form>
-                </div>
-                <div class="box col col-lg-3.3">
-                    <h4>WhatsApp</h4>
-                    <form action="/gantiWa" method="post">
-                        <input type="text" class="form-control" name="whatsApp" id="whatsApp" placeholder="<%= whatsApp %>" autocomplete="off">
-                        <button type="submit" class="btn btn-primary">Ganti</button>
-                    </form>
-                </div>
-                <div class="box col col-lg-3.3">
-                    <h4>Telepon</h4>
-                    <form action="/gantiTelepon" method="post">
-                        <input type="text" class="form-control" name="telepon" id="telepon" placeholder="<%= telepon %>" autocomplete="off">
-                        <button type="submit" class="btn btn-primary">Ganti</button>
-                    </form>
-                </div>
+        <h3>Kontak</h3>
+        <div class="kontak row d-flex justify-content-center">
+            <div class="box col col-lg-3.3">
+                <h4>Email</h4>
+                <form action="/gantiEmail" method="post">
+                    <input type="text" class="form-control" name="email" id="email" placeholder="<%= email %>"
+                        autocomplete="off">
+                    <button type="submit" class="btn btn-primary">Ganti</button>
+                </form>
             </div>
+            <div class="box col col-lg-3.3">
+                <h4>WhatsApp</h4>
+                <form action="/gantiWa" method="post">
+                    <input type="text" class="form-control" name="whatsApp" id="whatsApp" placeholder="<%= whatsApp %>"
+                        autocomplete="off">
+                    <button type="submit" class="btn btn-primary">Ganti</button>
+                </form>
+            </div>
+            <div class="box col col-lg-3.3">
+                <h4>Telepon</h4>
+                <form action="/gantiTelepon" method="post">
+                    <input type="text" class="form-control" name="telepon" id="telepon" placeholder="<%= telepon %>"
+                        autocomplete="off">
+                    <button type="submit" class="btn btn-primary">Ganti</button>
+                </form>
+            </div>
+        </div>
     </div>
 </body>
 <%- include('../pembungkus/footer.ejs') %>
